# ghost-runner

./: main.py  pyproject.toml  test_drive.py
bot/: config.py  router.py  telegram.py
brain/: graph.py  nodes.py  schema.py
