[project]
name = "ghost-runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.8",
    "pydantic>=2.13.4",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
]
